--- a/.babelrc
+++ b/.babelrc
@@ -1,14 +1,11 @@
 {
-	"sourceMaps": true,
-  "presets" : [["env", {
-	  "targets": {
-		"browsers": ["last 2 versions", "safari >= 10"]
-	  }
-	}],
-	"stage-0"
-   ],
+  "sourceMaps": true,
+  "presets": [
+    ["es2015", { "loose":true }],
+    "stage-0"
+  ],
   "plugins": [
-	["transform-decorators-legacy"],
-	["transform-react-jsx", { "pragma": "h" }]
+    ["transform-decorators-legacy"],
+    ["transform-react-jsx", { "pragma": "h" }]
   ]
 }
